courses/430_programming-languages/assignment-8/tests/error/error06.correct
token '+' after logical end of program
